--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "load-bmfont": "^1.2.3",
     "super-animejs": "^3.1.0",
     "three": "npm:super-three@0.169.0",
-    "three-bmfont-text": "dmarcos/three-bmfont-text#eed4878795be9b3e38cf6aec6b903f56acd1f695",
-    "webvr-polyfill": "^0.10.12"
+    "three-bmfont-text": "dmarcos/three-bmfont-text#eed4878795be9b3e38cf6aec6b903f56acd1f695"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
