--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "promise-polyfill": "^3.1.0",
     "super-animejs": "^3.1.0",
     "super-three": "^0.152.0",
-    "three-bmfont-text": "mrxz/three-bmfont-text#eed4878795be9b3e38cf6aec6b903f56acd1f695",
+    "three-bmfont-text": "dmarcos/three-bmfont-text#eed4878795be9b3e38cf6aec6b903f56acd1f695",
     "webvr-polyfill": "^0.10.12"
   },
   "devDependencies": {
