--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "vendor/**/*"
   ],
   "dependencies": {
+    "@ungap/custom-elements": "^1.1.0",
     "buffer": "^6.0.3",
     "custom-event-polyfill": "^1.0.6",
     "debug": "ngokevin/debug#noTimestamp",
     "deep-assign": "^2.0.0",
-    "@ungap/custom-elements": "^1.1.0",
     "load-bmfont": "^1.2.3",
     "object-assign": "^4.0.1",
     "present": "0.0.6",
@@ -58,6 +58,9 @@
     "chalk": "^1.1.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "eslint": "^8.45.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard-jsx": "^11.0.0",
     "ghpages": "0.0.8",
     "git-rev": "^0.2.1",
     "glob": "^8.0.3",
