--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,30 +4,30 @@
     "ecmaVersion": 12
   },
   "rules": {
-    "no-var": "off",
-    "object-curly-spacing": "off",
-    "object-curly-newline": "off",
-    "object-shorthand": "off",
+    "array-bracket-spacing": "off",
+    "array-callback-return": "off",
+    "computed-property-spacing": "off",
+    "dot-notation": "off",
+    "indent": "off",
+    "no-mixed-operators": "off",
+    "no-multi-spaces": "off",
+    "no-multiple-empty-lines": "off",
+    "no-unreachable-loop": "off",
+    "no-unused-expressions": "off",
     "no-unused-vars": "off",
     "no-use-before-define": "off",
     "no-useless-return": "off",
-    "indent": "off",
-    "dot-notation": "off",
+    "no-var": "off",
+    "object-curly-newline": "off",
+    "object-curly-spacing": "off",
+    "object-shorthand": "off",
     "prefer-const": "off",
-    "no-multi-spaces": "off",
-    "no-multiple-empty-lines": "off",
     "prefer-promise-reject-errors": "off",
+    "prefer-regex-literals": "off",
     "quote-props": "off",
     "quotes": "off",
-    "array-bracket-spacing": "off",
-    "no-mixed-operators": "off",
-    "computed-property-spacing": "off",
-    "prefer-regex-literals": "off",
-    "valid-typeof": "off",
-    "array-callback-return": "off",
-    "no-unused-expressions": "off",
     "spaced-comment": "off",
-    "no-unreachable-loop": "off"
+    "valid-typeof": "off"
   },
   "overrides": [
     {
