--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,22 +4,36 @@
     "ecmaVersion": 12
   },
   "rules": {
-    "array-bracket-spacing": "off",
-    "array-callback-return": "off",
-    "dot-notation": "off",
-    "indent": "off",
-    "no-mixed-operators": "off",
-    "no-multi-spaces": "off",
-    "no-unreachable-loop": "off",
-    "no-unused-vars": "off",
-    "no-useless-return": "off",
+    /* These rules are incompatible with ES5 */
     "no-var": "off",
-    "object-curly-spacing": "off",
     "object-shorthand": "off",
     "prefer-const": "off",
-    "prefer-promise-reject-errors": "off",
     "prefer-regex-literals": "off",
-    "quote-props": "off"
+
+
+    /* These rules are compatible with ES5
+       However they involve non-trivial code changes
+       Therefore need more careful review before adopting */ 
+    "no-mixed-operators": "off",
+    "no-unreachable-loop": "off",
+    "no-useless-return": "off",
+    "prefer-promise-reject-errors": "off",
+    
+
+    /* These rules are compatible with ES5
+       However they involve large-scale changes to the codebase, so
+       careful co-ordination is needed in adopting the rule to avoid 
+       creating merge issues for other PRs*/
+    "dot-notation": "off",
+    "indent": "off",
+    "no-multi-spaces": "off",
+    "no-unused-vars": "off",
+    "object-curly-spacing": "off",
+    "quote-props": "off",
+
+    /* These rules still to be reviewed */
+    "array-bracket-spacing": "off",
+    "array-callback-return": "off"
   },
   "overrides": [
     {
