More comments to explain config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "ecmaVersion": 12
   },
   "rules": {
-    /* These rules are incompatible with ES5 */
+    /* These rules are incompatible with ES5. */
     "no-var": "off",
     "object-shorthand": "off",
     "prefer-const": "off",
@@ -12,7 +12,7 @@
 
     /* These rules are compatible with ES5
        However they involve non-trivial code changes
-       Therefore need more careful review before adopting */ 
+       Therefore need more careful review before adopting. */ 
     "array-callback-return": "off",
     "no-mixed-operators": "off",
     "no-unreachable-loop": "off",
@@ -22,7 +22,7 @@
     /* These rules are compatible with ES5
        However they involve large-scale changes to the codebase, so
        careful co-ordination is needed in adopting the rule to avoid 
-       creating merge issues for other PRs*/
+       creating merge issues for other PRs. */
     "dot-notation": "off",
     "indent": "off",
     "no-multi-spaces": "off",
@@ -32,6 +32,8 @@
   },
   "overrides": [
     {
+      /* Code within /src is restricted to using ES5 JavaScript 
+        The exception is that ES6 classes are used sparingly - see exceptions below. */
       "files": ["./src/**/*.js"],
       
       "parserOptions": {
@@ -40,18 +42,21 @@
       }
     },
     {
+      /* These modules use ES6 classes, and so are parsed as ES6 to avoid errors. */
       "files": ["./src/core/**/a-*.js"],
       "parserOptions": {
         "ecmaVersion": 6
       }
     },
     {
+      /* This module use ES6 classes, and so is parsed as ES6 to avoid errors. */
       "files": ["./src/extras/primitives/primitives.js"],
       "parserOptions": {
         "ecmaVersion": 6
       }
     },
     {
+      /* This code is external, and the ES5 restrictions do not apply to it. */
       "files": ["./src/lib/**/*.js"],
       "parserOptions": {
         "sourceType": "module",
