--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,6 +69,13 @@
       }
     },
     {
+      /* This module uses ES8 async / await due to WebXR Anchor Module integration */
+      "files": ["./src/components/ai-model.js"],
+      "parserOptions": {
+        "ecmaVersion": 8
+      }
+    },
+    {
       /* This module uses ES6 for…of loops, and so is parsed as ES6 to avoid errors. */
       "files": ["./src/components/hand-tracking-controls.js"],
       "parserOptions": {
