--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "buffer": "^6.0.3",
     "debug": "ngokevin/debug#noTimestamp",
     "deep-assign": "^2.0.0",
+    "@gradio/client": "0.14.0",
     "load-bmfont": "^1.2.3",
     "super-animejs": "^3.1.0",
     "super-three": "0.162.0",
@@ -73,6 +74,7 @@
     "karma-webpack": "^5.0.0",
     "markserv": "github:sukima/markserv#feature/fix-broken-websoketio-link",
     "mocha": "^10.0.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "replace-in-file": "^2.5.3",
     "shelljs": "^0.7.7",
     "shx": "^0.2.2",
@@ -115,7 +117,7 @@
     "webxr"
   ],
   "engines": {
-    "node": ">= 4.6.0",
-    "npm": ">= 2.15.9"
+    "node": ">= 21.7.1",
+    "npm": ">= 10.5.0"
   }
 }
