--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   ],
   "dependencies": {
     "buffer": "^6.0.3",
-    "debug": "ngokevin/debug#noTimestamp",
+    "debug": "^4.3.4",
     "deep-assign": "^2.0.0",
     "load-bmfont": "^1.2.3",
     "super-animejs": "^3.1.0",
