--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:firefox": "npm test -- --browsers Firefox",
     "test:chrome": "npm test -- --browsers Chrome",
     "test:nobrowser": "NO_BROWSER=true npm test",
-    "test:node": "mocha --ui tdd tests/node"
+    "test:node": "node --experimental-require-module ./node_modules/mocha/bin/mocha --ui tdd tests/node"
   },
   "repository": "aframevr/aframe",
   "license": "MIT",
@@ -60,7 +60,8 @@
     "git-rev": "^0.2.1",
     "glob": "^8.0.3",
     "husky": "^0.11.7",
-    "jsdom": "^20.0.0",
+    "jsdom": "^24.0.0",
+    "jsdom-global": "^3.0.2",
     "karma": "^6.4.0",
     "karma-chai-shallow-deep-equal": "0.0.4",
     "karma-chrome-launcher": "^3.1.1",
