--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "main": "dist/aframe-master.js",
   "scripts": {
     "dev": "cross-env INSPECTOR_VERSION=dev webpack serve --port 8080",
-    "dist": "node scripts/updateVersionLog.js && npm run dist:min && npm run dist:max",
-    "dist:max": "webpack --config webpack.config.js",
-    "dist:min": "webpack --config webpack.prod.config.js",
+    "dist": "node scripts/updateVersionLog.js && npm run dist:min && npm run dist:max && npm run dist:module",
+    "dist:max": "webpack --config webpack.config.cjs",
+    "dist:min": "webpack --config webpack.prod.config.cjs",
+    "dist:module": "webpack --config webpack.module.config.cjs",
     "docs": "markserv --dir docs --port 9001",
     "preghpages": "node ./scripts/preghpages.js",
     "ghpages": "gh-pages -d gh-pages",
