Add 3D gaussian splats support

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -84,6 +84,13 @@
       }
     },
     {
+      /* This module uses ES8 async / await due to WebXR Anchor Module integration */
+      "files": ["./src/components/splat.js"],
+      "parserOptions": {
+        "ecmaVersion": 8
+      }
+    },
+    {
       /* This code is external, and the ES5 restrictions do not apply to it. */
       "files": ["./src/lib/**/*.js"],
       "parserOptions": {
