--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -84,7 +84,7 @@
       }
     },
     {
-      /* This module uses ES8 async / await due to WebXR Anchor Module integration */
+      /* This module uses ES8 async / await */
       "files": ["./src/components/splat.js"],
       "parserOptions": {
         "ecmaVersion": 8
