Use webpack-dev-server 5.0.4 to show the correct ip (fix #5657)

--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "too-wordy": "ngokevin/too-wordy",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
+    "webpack-dev-server": "~5.0.4",
     "write-good": "^1.0.8"
   },
   "link": true,
