--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "debug": "^4.3.4",
     "deep-assign": "^2.0.0",
     "load-bmfont": "^1.2.3",
+    "stats-gl": "^3.6.0",
     "super-animejs": "^3.1.0",
     "three": "npm:super-three@0.175.0",
     "three-bmfont-text": "dmarcos/three-bmfont-text#eed4878795be9b3e38cf6aec6b903f56acd1f695"
